add filter for deleted configure
