# backend/src/modules/pomodoro/infrastructure/database/mappers/pomodoro.mapper.ts
@@ -19,5 +19,6 @@ export function toPomodoroPersistence(domain: Pomodoro): PomodoroOrmEntity {
     isDefault: domain.isDefault,
     createdAt: domain.createdAt,
     updatedAt: domain.updatedAt,
+    deletedAt: domain.deletedAt,
   });
 }
